--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ body {
     padding: 20px;
     position: relative;
     width: 100%;
-    height: auto;
+    height: 70%;
     margin: auto;
     border-bottom: 1px solid #00357b;
 }
